--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <div class="sticky-top d-flex align-items-center justify-content-around px-5 background-color">
-<div><a class="poppins-black heading" href="{% url 'skapp:index' %}">Va Keel</a></div>
-<button class="theme-btn" id="theme-button">light</button>
+<div><a class="poppins-black heading" href="{% url 'skapp:write' %}">For Jatan</a></div>
+<!-- <button class="theme-btn" id="theme-button">light</button> -->
 </div>
 <!-- 
 <nav class="navbar bg-body-tertiary sticky-top">
