--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
     <img src="{% static 'skapp/imgs/logo.svg' %}" style="width: 40px;" class="mx-auto mb-2" alt="deepblue logo">
     <img src="{% static 'skapp/imgs/name1.svg' %}" style="width: 200px;" class="mx-auto" alt="deepblue logo">
   </div>
-  <div style="text-align: center;"><a class="poppins" style="font-size: small; font-weight: 500; color: #333;" href="{% url 'skapp:write' %}">For Jatin</a></div>
+  <div style="text-align: center;"><a class="poppins" style="font-size: small; font-weight: 500; font-style: italic; color: #333;" href="{% url 'skapp:write' %}">For Jatin</a></div>
 </div>
 </div>
 <!-- <button class="theme-btn" id="theme-button">light</button> -->
