--- a/skapp/templates/blog/write.html
+++ b/skapp/templates/blog/write.html
@@ -43,6 +43,7 @@
     <span>{{ messages }}</span>
     {% endif %}
 </div>
+<div class="alert-container position-absolute top-10 right-5"></div>
 {% if messages %}
 <div class="alert alert-warning alert-dismissible" role="alert">
     <div>{{messages}}</div>
