some style changes

--- a/skapp/templates/blog/write.html
+++ b/skapp/templates/blog/write.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-<title>Write | Sence</title>
+<title>Lawyer's | deepblue</title>
 {% endblock %}
 
 {% block styles %}
